# vibecheck

./: .env.example  .gitignore  .kata.toml  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
.beads/: .beads-credential-key  daemon-error  issues.jsonl  metadata.json
api/: index.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEV_WORKFLOW.md  README.md
docs/plans/: 2026-02-08-phase1-critical-design-fixes.md
public/: index.html  llms.txt
scripts/: add_articles_table.sql  backfill_metadata.py  direct_import.py  enhance_articles.py  ingest_whatsapp.py  schema_check.py  vibecheck_db.py
src/vibecheck/: __init__.py  admin.py  api.py  config.py  database.py  kura.py  models.py  web.py
src/vibecheck/ingestion/: __init__.py  base.py  slack.py  whatsapp.py
src/vibecheck/mcp/: __init__.py  server.py
src/vibecheck/templates/: articles.html  base.html  bookmarks.html  communities.html  community.html  discover.html  docs.html  index.html  tool.html
src/vibecheck/templates/admin/: article_edit.html  articles_list.html  base.html  dashboard.html  login.html  tool_edit.html  tools_list.html
supabase/: config.toml
supabase/migrations/: 20260201220517_initial_schema.sql  20260201225027_add_communities_table.sql  20260201225338_add_mention_timestamps.sql  20260202000000_add_articles.sql  20260415_enable_rls_security_fix.sql
tests/: __init__.py  test_ingestion.py  test_web_templates.py
