[project]
name = "vibecheck"
version = "0.1.0"
description = "AI tools intelligence - curated evaluations with API access"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Joi Ito", email = "joi@ito.com"}
]
keywords = ["ai", "tools", "catalog", "api", "evaluation"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.11",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
ingestion = [
    "anthropic>=0.40.0",  # For content sanitization
]

[project.scripts]
vibecheck = "vibecheck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibecheck"]

[tool.hatch.build.targets.wheel.force-include]
"src/vibecheck/templates" = "vibecheck/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Web UI
# jinja2 is already a dependency of fastapi
